--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -5,10 +5,11 @@ body, html
     min-height 100vh
     width 100%
     min-width 320px
+    background-color $black
 
 
 *
-    font-family "Calibre"
+    font-family "Roboto"
     box-sizing border-box
 
     &:focus, &:active
@@ -39,6 +40,11 @@ ul, li
     margin 0
     list-style-type none
     
+.relative
+    position relative
+    
+.absolute
+    position absolute
 
 div.container
     display flex
@@ -50,8 +56,92 @@ div.container
         justify-content center
         align-items center
         
+    &.black
+        background-color $black
+        
+    &.yellow
+        background-color $yellow
+        
     &--container-inner
         width 1280px
         flex-flow column wrap
         justify-content center
         align-items center
+        
+        &--row
+            flex-flow row wrap
+    
+.text-container
+    &--center
+        float none
+        margin 0 auto    
+
+
+/* -- HEADER -- */
+div.container.container--container-outer.yellow
+    max-height 350px
+    min-height 250px
+
+div.header
+    flex-flow row wrap
+    justify-content center
+    align-items center
+    
+    &--header-part
+        flex-flow: column wrap
+        justify-content center
+        align-items center
+        
+        width 50%
+        max-width: 638px
+        
+        .text-container
+            max-width 65%
+            
+        h1
+            font-weight 400
+            font-size 36px
+            
+        div.absolute
+            span
+                color white
+                font-size 20px
+        
+
+.divider
+    width 2px
+    height: 190px
+    background-color $black
+    
+
+/* -- FORM SECTION -- */
+div.container.container--container-outer#form-section
+    div.container.container--container-inner
+        justify-content flex-start
+        align-items flex-start
+        
+        max-width 640px
+
+        h2
+            color yellow
+            font-size 28px
+            font-weight 400
+            
+        p
+            color $grey
+            margin-top 25px
+            max-width 80%
+            
+
+/* -- WHERE CONTAINER -- */
+div.container.container--container-outer#where
+    div.container.container--container-inner
+        p
+            color grey
+            
+        div.logo-container
+            width 450px
+            
+            flex-flow row wrap
+            justify-content space-between
+            align-items center
