desktop should be ready

--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -51,7 +51,7 @@ div.container
     
     &--container-outer
         width 100vw
-        min-height 500px
+        // min-height 500px
         flex-flow column wrap
         justify-content center
         align-items center
@@ -78,9 +78,12 @@ div.container
 
 
 /* -- HEADER -- */
-div.container.container--container-outer.yellow
+div.container.container--container-outer#header
     max-height 350px
     min-height 250px
+    
+    @media screen and (min-height 1050px)
+        min-height 30vh
 
 div.header
     flex-flow row wrap
@@ -117,10 +120,13 @@ div.header
 /* -- FORM SECTION -- */
 div.container.container--container-outer#form-section
     div.container.container--container-inner
-        justify-content flex-start
+        justify-content center
         align-items flex-start
         
         max-width 640px
+        
+        @media screen and (min-height 1050px)
+            min-height 50vh
 
         h2
             color yellow
@@ -132,10 +138,42 @@ div.container.container--container-outer#form-section
             margin-top 25px
             max-width 80%
             
+        form
+            margin-top 20px
+            width 100%
+            
+            label
+                color $grey
+                font-size 11px
+                margin-bottom 4px
+                
+            input[type='email'], input[type='text']
+                background-color $black
+                border 2px solid $grey
+                border-radius 2px
+                box-shadow 0 0 5px rgba(255, 255, 255, 0.75)
+                width 60%
+                padding 10px 5px
+                
+            input[type='submit']
+                background-color $yellow
+                color $black
+                outline none
+                border none
+                padding 7px 10px
+                font-weight bold
+                font-size 14px
+                
+            div
+                margin-bottom 20px
+            
 
 /* -- WHERE CONTAINER -- */
 div.container.container--container-outer#where
     div.container.container--container-inner
+        @media screen and (min-height 1050px)
+            min-height 16vh
+
         p
             color grey
             
@@ -146,12 +184,17 @@ div.container.container--container-outer#where
             flex-flow row wrap
             justify-content space-between
             align-items center
+                
             
 /* -- FOOTER -- */
 div.container.container--container-outer#footer
     min-height 0
+    
+    @media screen and (min-height 1050px)
+        min-height 4vh
+
     div.container.container--container-inner
-        margin-top 18px
+        margin-top 13px
         span, a
             color $grey
             
