--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -164,6 +164,9 @@ div.container.container--container-outer#form-section
                 font-weight bold
                 font-size 14px
                 
+                &[disabled='disabled']
+                    background-color $grey
+                
             div
                 margin-bottom 20px
             
