--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -86,8 +86,11 @@ div.container.container--container-outer#header
     max-height 350px
     min-height 150px
     
-    @media screen and (min-height 800px)
-        min-height 20vh
+    @media screen and (min-height 1000px) and (min-width 1300px)
+        min-height 30vh
+    
+    @media screen and (min-height 800px) and (max-height 1000px)
+        min-height 23vh
         
     @media screen and (min-height 800px) and (max-width 800px)
         min-height 275px
