--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -169,6 +169,9 @@ div.container.container--container-outer#form-section
         @media screen and (min-height 800px)
             min-height calc(38vh - 98px)
             padding 4vh 0
+            
+        @media screen and (min-width 1920px) and (min-height 1000px)
+            min-height calc(55vh - 98px)
 
         h2
             color yellow
