--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -56,6 +56,10 @@ div.container
         justify-content center
         align-items center
         
+        &#form-section, &#where
+            @media screen and (max-width 800px)
+                padding 40px 0
+        
     &.black
         background-color $black
         
@@ -94,6 +98,9 @@ div.container.container--container-outer#header
         
     @media screen and (min-height 800px) and (max-width 800px)
         min-height 275px
+
+    @media screen and (max-width 800px) and (max-height 800px)
+        min-height 250px
 
 div.header
     flex-flow row wrap
@@ -145,6 +152,9 @@ div.header
     width 2px
     height 120px
     background-color $black
+    
+    @media screen and (min-height 1000px) and (min-width 1300px)
+        height 240px
     
     @media screen and (max-width 800px)
         height 2px
@@ -266,6 +276,9 @@ div.container.container--container-outer#footer
 
     div.container.container--container-inner
         margin-top 13px
+        
+        @media screen and (max-width 800px)
+            margin-bottom 13px
         
         div.container.text-container--center
             @media screen and (max-width 500px)
