--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -225,6 +225,9 @@ div.container.container--container-outer#form-section
                 font-weight bold
                 font-size 14px
                 
+                -webkit-appearance none
+                border-radius 0
+                
                 &[disabled='disabled']
                     background-color $grey
                 
@@ -259,6 +262,8 @@ div.container.container--container-outer#where
                 justify-content center
                 
                 margin-top 0
+                
+                width 100%
                 
                 img
                     margin-top 30px
