update font and box sizing of h1 and form color

--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -140,6 +140,9 @@ div.header
             
             @media screen and (max-width 1280px)
                 font-size 24px
+                
+            @media screen and (max-height 800px)
+                font-size 28px
             
         div.absolute
             span
@@ -147,7 +150,7 @@ div.header
                 font-size 20px
                 letter-spacing 1.18px
                 
-                @media screen and (max-width 1280px)
+                @media screen and (max-height 800px)
                     font-size 16px
         
 
@@ -213,7 +216,7 @@ div.container.container--container-outer#form-section
                 
             input[type='email'], input[type='text']
                 background-color $black
-                color $grey
+                color white
                 border 1px solid $grey
                 border-radius 2px
                 box-shadow 0 0 5px rgba(255, 255, 255, 0.75)
